<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="#A9BCBF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#42446469"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/about_the_author"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:text="@string/email"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:text="@string/phone_number"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/close_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="7dp"
        android:layout_marginTop="15dp"
        android:elevation="20dp"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</LinearLayout>