<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    android:background="#A9BCBF"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A9BCBF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/titan_one"
                android:text="@string/displayDate"
                android:textColor="#151515"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/displayTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="85dp"
                    android:fontFamily="@font/titan_one"
                    android:text="@string/zero_zero"
                    android:textColor="#151515"
                    android:textSize="100sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="49dp"
                    android:fontFamily="@font/titan_one"
                    android:text="@string/degree"
                    android:textColor="#151515"
                    android:textSize="60sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/h6" />
        </LinearLayout>

        <TextView
            android:id="@+id/measure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/thirtySix"
            android:layout_centerInParent="true"
            android:layout_marginStart="55dp"
            android:textColor="#151515"
            android:text="@string/measuringTempValue"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dot3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="80dp"
            android:fontFamily="@font/titan_one"
            android:layout_marginEnd="34dp"
            android:text="@string/degree"
            android:textColor="#151515"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="80dp"
            android:layout_toEndOf="@id/twentyFive"
            android:fontFamily="@font/titan_one"
            android:text="@string/degree"
            android:textColor="#151515"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="80dp"
            android:layout_toEndOf="@id/thirtySix"
            android:fontFamily="@font/titan_one"
            android:text="@string/degree"
            android:textColor="#151515"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/thirtySix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/normal"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/thirtySixPointFive"
            android:textColor="#151515"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/twentyFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/low"
            android:layout_marginLeft="45dp"
            android:layout_marginBottom="-5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/twentyFivePointZEro"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:textColor="#151515"
            android:text="@string/normal" />

        <TextView
            android:id="@+id/low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="47dp"
            android:text="@string/low"
            android:textColor="#151515"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/fourty_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/hi"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="43dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/fourtyFourPointOne"
            android:textColor="#151515"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="60dp"
            android:textColor="#151515"
            android:layout_marginBottom="50dp"
            android:text="@string/high" />
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-5931929972572556/8795505730">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigationView"
        android:background="#FFFFFF"
        app:menu="@menu/menu"
        app:headerLayout="@layout/header_layout"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        />

</androidx.drawerlayout.widget.DrawerLayout>
